--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-torch
 numpy<2.0
+torch==2.0.1 
+torchvision==0.15.2
 scikit-learn
 matplotlib
 pandas
@@ -7,3 +8,4 @@ tqdm
 opacus==1.3.0
 textattack
 transformers
+
